# pacebar

./: .gitattributes  .gitignore  LICENSE  PUBLISHING.md  README.md  entry.py  meet-control.spec  pacebar.spec  pyproject.toml
scripts/: build.bat  build.sh  run.bat  run.sh
src/meet_control/: __init__.py  __main__.py  app.py  constants.py  formatting.py
src/meet_control/editor/: fields.py
src/meet_control/overlay/: hotkeys.py  square.py
src/pacebar/: __init__.py  __main__.py  constants.py  paths.py  persistence.py  timing.py
src/pacebar/editor/: __init__.py  row.py  window.py
src/pacebar/overlay/: __init__.py  bar.py  controller.py  hotkeys.py
